--- a/docs/hw1-proxprop-student.ipynb
+++ b/docs/hw1-proxprop-student.ipynb
@@ -629,23 +629,41 @@
     "        x_train, y_train = training_data\n",
     "        if test_data:\n",
     "            x_test, y_test = test_data\n",
-    "        for j in range(epochs):\n",
-    "            loss = 0\n",
-    "            for i in range(x_train.shape[0] // mini_batch_size):\n",
-    "                x_mini_batch = x_train[\n",
-    "                    i * mini_batch_size : (i * mini_batch_size + mini_batch_size)\n",
-    "                ]\n",
-    "                y_mini_batch = y_train[\n",
-    "                    i * mini_batch_size : (i * mini_batch_size + mini_batch_size)\n",
-    "                ]\n",
-    "                self.update_mini_batch(x_mini_batch, y_mini_batch, eta)\n",
-    "                loss += self.backprop(x_mini_batch.T, y_mini_batch.T, eta)\n",
-    "            wloss = loss / (x_train.shape[0] // mini_batch_size)\n",
+    "        wloss = logloss(self.feedforward(x_train).T, y_train) / (\n",
+    "            x_train.shape[0] // mini_batch_size\n",
+    "        )\n",
+    "        for j in range(epochs + 1):\n",
+    "            if logger is not None:\n",
+    "                logger.report_scalar(\n",
+    "                    title=\"Loss\", series=\"ProxyProp Loss\", iteration=j, value=wloss\n",
+    "                )\n",
     "            if test_data:\n",
     "                acc = self.evaluate((x_test, y_test))\n",
+    "                if logger is not None:\n",
+    "                    logger.report_scalar(\n",
+    "                        title=\"Accuracy\",\n",
+    "                        series=\"ProxyProp Accuracy\",\n",
+    "                        iteration=j,\n",
+    "                        value=acc,\n",
+    "                    )\n",
     "                print(\"Epoch: {0}, Accuracy: {1}, Loss: {2}\".format(j, acc, wloss))\n",
     "            else:\n",
     "                print(\"Epoch: {0}\".format(j))\n",
+    "            if j == epochs:\n",
+    "                break\n",
+    "            loss = 0\n",
+    "            for i in range(x_train.shape[0] // mini_batch_size):\n",
+    "                x_mini_batch = x_train[\n",
+    "                    (mini_batch_size * i) : (mini_batch_size * (i + 1))\n",
+    "                ]\n",
+    "                y_mini_batch = y_train[\n",
+    "                    (mini_batch_size * i) : (mini_batch_size * (i + 1))\n",
+    "                ]\n",
+    "                loss += self.backprop(x_mini_batch.T, y_mini_batch.T, eta)\n",
+    "            wloss = loss / (\n",
+    "                x_train.shape[0] // mini_batch_size\n",
+    "            )  # we compute the average of the losses over the number of minibatches\n",
+    "\n",
     "\n",
     "\n",
     "# Simple check if all is fine\n",
